users新增swagger 註解
