# swagger_output.json
@@ -281,7 +281,12 @@
               }
             }
           }
-        }
+        },
+        "security": [
+          {
+            "AuthToken": []
+          }
+        ]
       }
     },
     "/posts/{postId}": {
@@ -393,7 +398,12 @@
               }
             }
           }
-        }
+        },
+        "security": [
+          {
+            "AuthToken": []
+          }
+        ]
       },
       "delete": {
         "tags": [
@@ -428,29 +438,246 @@
               }
             }
           }
-        }
+        },
+        "security": [
+          {
+            "AuthToken": []
+          }
+        ]
       }
     },
     "/users/": {
       "get": {
-        "description": "",
+        "tags": [
+          "Users"
+        ],
+        "description": "取得全部使用者資料",
         "parameters": [],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "成功訊息",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "boolean",
+                  "example": true
+                },
+                "data": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "_id": {
+                        "type": "string",
+                        "example": "627b338faf6b9972e353ac19"
+                      },
+                      "name": {
+                        "type": "string",
+                        "example": "TESTMAN"
+                      },
+                      "avatar": {
+                        "type": "string",
+                        "example": ""
+                      },
+                      "likes": {
+                        "type": "array",
+                        "example": [],
+                        "items": {}
+                      },
+                      "following": {
+                        "type": "array",
+                        "example": [],
+                        "items": {}
+                      },
+                      "comments": {
+                        "type": "array",
+                        "example": [],
+                        "items": {}
+                      },
+                      "createdAt": {
+                        "type": "string",
+                        "example": "2022-05-11T03:54:55.516Z"
+                      }
+                    }
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "AuthToken": []
+          }
+        ]
       },
       "post": {
-        "description": "",
-        "parameters": [],
-        "responses": {}
+        "tags": [
+          "Users"
+        ],
+        "description": "新增單一使用者資料",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "資料格式",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string",
+                  "example": "TESTMAN"
+                },
+                "email": {
+                  "type": "string",
+                  "example": "testman@mail.com"
+                },
+                "password": {
+                  "type": "string",
+                  "example": "123456"
+                },
+                "confirmPsw": {
+                  "type": "string",
+                  "example": "123456"
+                },
+                "sex": {
+                  "type": "string",
+                  "example": "male"
+                },
+                "avator": {
+                  "type": "string",
+                  "example": "https://pngimg.com/uploads/telegram/telegram_PNG36.png"
+                }
+              },
+              "required": [
+                "name",
+                "email",
+                "password",
+                "confirmPsw"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "成功回傳資訊",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "boolean",
+                  "example": true
+                },
+                "message": {
+                  "type": "string",
+                  "example": "新增成功"
+                },
+                "data": {
+                  "type": "object",
+                  "properties": {
+                    "name": {
+                      "type": "string",
+                      "example": "TESTMAN"
+                    },
+                    "email": {
+                      "type": "string",
+                      "example": "testman@mail.com"
+                    },
+                    "password": {
+                      "type": "string",
+                      "example": "123456"
+                    },
+                    "avatar": {
+                      "type": "string",
+                      "example": ""
+                    },
+                    "likes": {
+                      "type": "array",
+                      "example": [],
+                      "items": {}
+                    },
+                    "following": {
+                      "type": "array",
+                      "example": [],
+                      "items": {}
+                    },
+                    "_id": {
+                      "type": "string",
+                      "example": "627b388a76cb9f85554f2340"
+                    },
+                    "comments": {
+                      "type": "array",
+                      "example": [],
+                      "items": {}
+                    },
+                    "createdAt": {
+                      "type": "string",
+                      "example": "2022-05-11T04:16:10.309Z"
+                    }
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "AuthToken": []
+          }
+        ]
       },
       "delete": {
-        "description": "",
+        "tags": [
+          "Users"
+        ],
+        "description": "刪除全部使用者資料",
         "parameters": [],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "成功訊息",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "boolean",
+                  "example": true
+                },
+                "message": {
+                  "type": "string",
+                  "example": "全部項目刪除成功"
+                },
+                "data": {
+                  "type": "array",
+                  "example": [],
+                  "items": {}
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "AuthToken": []
+          }
+        ]
       }
     },
     "/users/{userId}": {
       "get": {
-        "description": "",
+        "tags": [
+          "Users"
+        ],
+        "description": "取得單一使用者資料",
         "parameters": [
           {
             "name": "userId",
@@ -459,22 +686,127 @@
             "type": "string"
           }
         ],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "成功訊息",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "boolean",
+                  "example": true
+                },
+                "data": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "_id": {
+                        "type": "string",
+                        "example": "627b338faf6b9972e353ac19"
+                      },
+                      "name": {
+                        "type": "string",
+                        "example": "TESTMAN"
+                      },
+                      "avatar": {
+                        "type": "string",
+                        "example": ""
+                      },
+                      "likes": {
+                        "type": "array",
+                        "example": [],
+                        "items": {}
+                      },
+                      "following": {
+                        "type": "array",
+                        "example": [],
+                        "items": {}
+                      },
+                      "comments": {
+                        "type": "array",
+                        "example": [],
+                        "items": {}
+                      },
+                      "createdAt": {
+                        "type": "string",
+                        "example": "2022-05-11T03:54:55.516Z"
+                      }
+                    }
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "AuthToken": []
+          }
+        ]
       },
       "patch": {
-        "description": "",
+        "tags": [
+          "Users"
+        ],
+        "description": "修改單一使用者資料",
         "parameters": [
           {
             "name": "userId",
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "description": "資料格式",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string",
+                  "example": "美索不達米亞"
+                }
+              }
+            }
           }
         ],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "成功訊息",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "boolean",
+                  "example": true
+                },
+                "message": {
+                  "type": "string",
+                  "example": "更新成功"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "AuthToken": []
+          }
+        ]
       },
       "delete": {
-        "description": "",
+        "tags": [
+          "Users"
+        ],
+        "description": "刪除單一使用者資料",
         "parameters": [
           {
             "name": "userId",
@@ -483,7 +815,32 @@
             "type": "string"
           }
         ],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "成功訊息",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "boolean",
+                  "example": true
+                },
+                "message": {
+                  "type": "string",
+                  "example": "刪除成功"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "AuthToken": []
+          }
+        ]
       }
     }
   }
